--- a/rtt.onboarding/vars/main.yml
+++ b/rtt.onboarding/vars/main.yml
@@ -1,2 +1,2 @@
 ---
-ansible_password: $1$$$oZnair.5t7dArkbRvv7ux1
+ansible_password: $6$00ylq41Lt$v5pJfxeSbKhvA.aKZphMuYS.IMbVsTVsiqtJ7bHn7bKk.Fe/vL8gKWmSYH8zQQqPB2UdvreivrR9Gaej63RqM.
